feat: add name based stack webhook
