# src/models.ts
@@ -28,14 +28,27 @@ export const GetHealthOutput = z
   });
 export type GetHealthOutput = z.infer<typeof GetHealthOutput>;
 
-export const UpdateStackWebhookInput = z
+export const UpdateStackWebhookByIdInput = z
   .object({
     stackId: z.coerce.number().int().min(0),
   })
   .meta({
-    ref: "UpdateStackWebhookInput",
+    ref: "UpdateStackWebhookByIdInput",
   });
-export type UpdateStackWebhookInput = z.infer<typeof UpdateStackWebhookInput>;
+export type UpdateStackWebhookByIdInput = z.infer<
+  typeof UpdateStackWebhookByIdInput
+>;
+
+export const UpdateStackWebhookByNameInput = z
+  .object({
+    stackName: z.string().trim().min(1),
+  })
+  .meta({
+    ref: "UpdateStackWebhookByNameInput",
+  });
+export type UpdateStackWebhookByNameInput = z.infer<
+  typeof UpdateStackWebhookByNameInput
+>;
 
 export const UpdateStackWebhookOutput = NoResponse.meta({
   responseDescription: "Stack update submitted",
